feature: add MySQL database, edit calls GET (findOne or findAll) and POST to create new register on Database